--- a/src/animations.css
+++ b/src/animations.css
@@ -21,11 +21,38 @@
   }
   
   .animate-out {
-    animation: slideOut 1.5s ease-in-out forwards;
+    animation: slideOut 2.5s ease-in-out forwards;
   }
   
   .animate-in {
     animation: slideIn 1s ease-in-out forwards;
   }
   
+  .cursor {
+    display: inline-block;
+    width: 0.2rem;
+    height: 1.6rem;
+    background-color: white;
+    animation: blink 1s infinite;
+  }
+  
+  .visible {
+    visibility: visible;
+  }
+  
+  .invisible {
+    visibility: hidden;
+  }
+  
+  @keyframes blink {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
   
